--- a/index.html
+++ b/index.html
@@ -1,31 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>เกมไพ่แต้มใหญ่-แต้มเล็ก</title>
+  <title>Cards Game</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
   <div id="game">
     <h1>Card Game</h1>
     <h3>Bot Cards</h3>
     <div id="bot-cards"></div>
     <h3>Player Cards</h3>
     <div id="player-hand"></div>
-    <div id="log"></div>
     <div id="middle-pile">
       <h3>กองกลาง</h3>
       <div id="pile"></div>
     </div>
     <div id="scores">
       <h3>Scores</h3>
-      <p>Player: <span id="player-score">0</span></p>
-      <p>Bot: <span id="bot-score">0</span></p>
+      <p id="score-display">Player: 0 | Bot: 0</p>
     </div>
-    <button id="play-turn">เล่นเทิร์น</button>
-    <button id="restart">เริ่มใหม่</button>
+    <button id="play-turn">Play Turn</button>
+    <button id="restart">Restart</button>
+    <!-- ปุ่มสำหรับแสดง/ซ่อนประวัติการเล่น -->
+    <button id="toggle-log">Show Match History</button>
+    <!-- ส่วนประวัติการเล่น -->
+    <div id="log"></div>
   </div>
+
   <script src="script.js"></script>
+
 </body>
 </html>
