--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h3>Scores</h3>
       <p id="score-display">Player: 0 | Bot: 0</p>
     </div>
-    <button id="play-turn">Play Turn</button>
+    <button id="play">Play Turn</button>
     <button id="restart">Restart</button>
     <!-- ปุ่มสำหรับแสดง/ซ่อนประวัติการเล่น -->
     <button id="toggle-log">Show Match History</button>
