--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
     <!-- ปุ่มสำหรับแสดง/ซ่อนประวัติการเล่น -->
     <button id="toggle-log">Show Match History</button>
     <!-- ส่วนประวัติการเล่น -->
-    <div id="log"></div>
+    <div id="logModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Match History</h2>
+        <div id="log"></div>
+      </div>
   </div>
 
   <script src="script.js"></script>
